2022-10-15T16:24:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256362439 # 523
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 213 395 / 225 410
* notice: next accum: outdated-unq outdated-all / unq all: 214 397 / 225 411
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-01] / []

2022-10-15T08:24:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3255004671 # 522
* notice: last 14d: unq all: 3 15
* notice: prev accum: outdated-unq outdated-all / unq all: 213 395 / 224 410
* notice: next accum: outdated-unq outdated-all / unq all: 213 395 / 225 410
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]

2022-10-15T01:55:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3254018497 # 521
* notice: last 14d: unq all: 3 15
* notice: prev accum: outdated-unq outdated-all / unq all: 213 395 / 223 409
* notice: next accum: outdated-unq outdated-all / unq all: 213 395 / 224 410
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-14]

2022-10-14T16:28:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251469890 # 520
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 211 392 / 222 407
* notice: next accum: outdated-unq outdated-all / unq all: 213 395 / 223 409
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-30] / []

2022-10-14T08:26:26Z: