@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-02T08:22:23Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-10-16T01:59:16Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
