@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-10-15T16:24:57Z",
+  "timestamp" : "2022-10-16T01:59:16Z",
   "count_outdated" : 397,
   "uniques_outdated" : 214,
   "count" : 411,
-  "uniques" : 225,
+  "uniques" : 224,
   "clones" : [
     {
       "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
