@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
