@@ -1,3 +1,11 @@
+2022-10-16T01:59:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3257897637 # 524
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 214 397 / 225 411
+* notice: next accum: outdated-unq outdated-all / unq all: 214 397 / 224 411
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-02 2022-10-15]
+
 2022-10-15T16:24:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256362439 # 523
 * notice: last 14d: unq all: 3 14
